# aasdk

./: CMakeLists.txt
aasdk_proto/: CMakeLists.txt  VideoResolutionEnum.proto
include/aasdk/USB/: IUSBWrapper.hpp  USBWrapper.hpp
src/Messenger/: MessageInStream.cpp
src/Transport/: SSLWrapper.cpp
src/USB/: USBWrapper.cpp
unit_test/USB/UT/: USBWrapper.mock.hpp
